samples/_failures_safe/1761002282_76a74d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2182875.c: In function ‘main’:
./samples/SAFE/__tmp_d2182875.c:154:28: error: missing terminating " character
  154 |                     printf("Error: Integer overflow in addition.\n
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d2182875.c:154:21: error: expected expression at end of input
  154 |                     printf("Error: Integer overflow in addition.\n
      |                     ^~~~~~
./samples/SAFE/__tmp_d2182875.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2182875.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2182875.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2182875.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2182875.c:154:21: error: expected declaration or statement at end of input
